# wyoming-microwakeword

./: .dockerignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
script/: format  lint  run
tests/: test_microwakeword.py
wyoming_microwakeword/: __init__.py  __main__.py
